@@ -2,6 +2,7 @@
    * Fixed rare hard crash when beams are being fired
    * Non-weapon outfits no longer show switch groups they are in as hot keys
    * Turn off weapon sets when changing type
+   * Fixed toggle weapon sets not triggering outfits over and over as expected
    * Fixed resizing not working on the background and toolkit in some cases
    * Added pilot.weapsetAddType and pilot.weapsetSetActive
    * Gave unicorp storm launchers a rarity of 2 and made it more available
